# ray-marching

./: .gitignore  CMakeLists.txt  README.md
examples/: CSG.flow  RGB_Spheres.flow  example_01.flow  example_02.flow
include/: AboutWidget.h  BooleanNode.h  BooleanNodeWidget.h  BoxNode.h  BoxNodeWidget.h  CapsuleNode.h  CapsuleNodeWidget.h  CodeEditor.h  CodeEditorWidget.h  ContainerWidget.h  CylinderNode.h  MainWindow.h  MasterSDFNode.h  MasterSDFNodeWidget.h  MaterialNode.h  MaterialNodeWidget.h  NGLScene.h  NodeEditorContainer.h  NodeEditorWidget.h  PlaneNode.h  PlaneNodeWidget.h  RayMarchNode.h  RayMarchNodeWidget.h  ScreenQuad.h  ShaderCodeContainer.h  ShaderCodeData.h  ShaderCodeWidget.h  SphereNode.h  SphereNodeWidget.h  SyntaxHighlighter.h  TestNode.h  TorusNode.h  TorusNodeWidget.h  UnionNode.h  UnionNodeWidget.h  Vec2Widget.h  Vec3Widget.h  Window.h  WindowParams.h
shaders/: DefaultFragment.glsl  DefaultVertex.glsl  RayMarchFragment.glsl  RayMarchVertex.glsl  RayMarching.glsl  example_01.glsl  materials.glsl
shaders/SDFs/: Capsule.glsl  Plane.glsl  Sphere.glsl
src/: AboutWidget.cpp  BooleanNode.cpp  BooleanNodeWidget.cpp  BoxNode.cpp  BoxNodeWidget.cpp  CapsuleNode.cpp  CapsuleNodeWidget.cpp  CodeEditor.cpp  CodeEditorWidget.cpp  ContainerWidget.cpp  CylinderNode.cpp  MainWindow.cpp  MasterSDFNode.cpp  MaterialNode.cpp  MaterialNodeWidget.cpp  NGLScene.cpp  NodeEditorContainer.cpp  NodeEditorWidget.cpp  PlaneNode.cpp  PlaneNodeWidget.cpp  RayMarchNode.cpp  RayMarchNodeWidget.cpp  ScreenQuad.cpp  ShaderCodeContainer.cpp  ShaderCodeWidget.cpp  SphereNode.cpp  SphereNodeWidget.cpp  SyntaxHighlighter.cpp  TestNode.cpp  TorusNode.cpp  TorusNodeWidget.cpp  UnionNode.cpp  UnionNodeWidget.cpp  Vec2Widget.cpp  Vec3Widget.cpp  Window.cpp  main.cpp
ui/: MainWindow.ui
